# TreeBuilder

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CNAME  Dockerfile  GDBCOMMANDS  Jupyter.ipynb  LICENSE  Makefile  NOTES.md  README.md  TODO.md  default.yaml  index.html  main.py  notebook.ipynb  run.sh  utils.sh
.github/workflows/: main.yml
analysis/: __init__.py  __main__.py  analysis.py  args.py  core.py  experiment.py  parse.py  plot.py  slides.py  udp.py  utils.py
analysis/archive/: readme.txt
analysis/plot/: __init__.py  args.py  comparison.py  core.py  draw.py  img.py  performance.py  plot.py  stages.py  utils.py
analysis/supervisor/: __init__.py  core.py
assets/: 8-CTWwJh_U.js  8-D88_2Qgw.js  TUMLogo.vue_vue_type_script_setup_true_lang-C6fhutID.js  base.yaml  blockDiagram-3C3LF3P3-CBD9BlTw.js  blockDiagram-efe38566-BBoUfUOo.js  c4Diagram-af207393-kBXfIxW5.js  channel-f9001828-BYBMgZpw.js  channel-f9001828-DelSzlgX.js  chunk-B7GIP3BC-CnZiO-Hu.js  chunk-CN5XARC6-C0eOH9PZ.js  chunk-K2ZEYYM2-BK_F0cE-.js  chunk-MKQVAYBJ-C1NwsL6U.js  chunk-TZBO7MLI-CzMb3dLC.js  chunk-ULVYQCHC-CgeKioaq.js  chunk-YJGJQOYZ-CEdaYsY8.js  chunk-ZSF2CFIE-DsAZUClQ.js  classDiagram-72b9c71d-BBnXk7sX.js  classDiagram-72b9c71d-Cflwbv-f.js  classDiagram-v2-fedb80f6-Cpi52KYP.js  createText-b70fe78a-edN3hC2H.js  dagre-XTQZZUF6-wpTWLEoO.js  edges-ce5cfb7c-DX9J8Lrh.js  erDiagram-4NQANQ5Z-CY98TZYL.js  erDiagram-543717f2-CHAN4vXr.js  erDiagram-543717f2-DGY9azsa.js  flowDb-ba9bd7fa-DbVP7oDv.js  flowDiagram-VKULTSNG-80XQDGhY.js  flowDiagram-b5e7ba30-C9hin8k1.js  flowDiagram-b5e7ba30-DLBxMnwz.js  flowDiagram-v2-54711e03-DfxQ_EOQ.js  flowchart-elk-definition-2d49707c-BARypUdj.js  gitGraphDiagram-FCD4PDHO-CtMeg6ur.js  gitGraphDiagram-b9392a12-CeUL6fL3.js  graph-fe24fab6-BammGZWj.js  graph-fe24fab6-DgdURGAk.js  index-BfB8TzU9.js  index-DhXHQvE8.js  index-fc479858-BbGtENj2.js  index-fc479858-C6DISFUF.js  (+48 more)
assets/docker/: entry.sh
assets/modules/: shiki-DLxQYbt2.js  unplugin-icons-CquepfLA.js  unplugin-icons-vksyP9w5.js  vue-DaYSqhD_.js
assets/slidev/: 1-OUTXQ8bg.js  10-CZWE1b7F.js  12-j6YkTo04.js  14-BU72Ku0m.js  14-BXCIv7Gs.js  16-BUZi8Ss0.js  17-CnGINhgd.js  19-BClu9SW_.js  19-DShbVhSW.js  2-CMSTKPS6.js  2-o-sqVZHf.js  404-CuMx7cy-.js  404-xYMK0tCk.js  5-BF3KD05C.js  6-Cve7f_gP.js  7-CPhiGnYl.js  ClicksSlider-C7UJfwKV.js  ClicksSlider-CR4MkWH7.js  ClicksSlider-NrU6SH0S.js  CodeBlockWrapper.vue_vue_type_script_setup_true_lang-njK8816k.js  DrawingControls-DbZX72x4.js  DrawingControls-Dx_g791P.js  DrawingControls.vue_vue_type_style_index_0_lang-DJZhbXaE.js  DrawingLayer-C1iZ-61G.js  DrawingPreview.vue_vue_type_script_setup_true_lang-76vui8hi.js  DrawingPreview.vue_vue_type_script_setup_true_lang-BONf2CYY.js  DrawingPreview.vue_vue_type_script_setup_true_lang-DWmX10pc.js  Mermaid.vue_vue_type_script_setup_true_lang-CqxCgAcj.js  Mermaid.vue_vue_type_script_setup_true_lang-DlY-H9aw.js  context-CWakdmAW.js  context-Cz62jeIy.js  default-DNZUp6XI.js  entry-CkdQi9Gm.js  entry-DQaktSpW.js  notes-PKupt0dF.js  overview-BCXLq8C2.js  overview-BPB0j9VP.js  overview-CjOLzFMg.js  play-2EE_Rrbs.js  play-7EgB46Jh.js  (+5 more)
assets/startup/: base.sh  client.sh  proxy.sh  recipient.sh
cmake/: debug.cmake  dpdk.cmake  examples.cmake  iouring.cmake  proto.cmake  zeromq.cmake
deploy/: __init__.py  __main__.py  core.py  gcp.py  gen.py  instance.py  main.py  run.py  utils.py
deploy/cloud/: __init__.py  aws.py  base.py  core.py  gcp.py
deploy/terra/: commands.hcl
deploy/terra/docker/: Dockerfile  entry.sh  main.tf  outputs.tf  variables.tf
deploy/terra/gcp/: main.tf
deploy/terra/packer/: commands.pkr.hcl  main.pkr.hcl
docs/: Kickoff.bbl  Kickoff.blg  Kickoff.tex  Makefile  README.md  main.tex  references.bib
docs/final/: Abbreviations.tex  Abstract.tex  Appendix.tex  Background.tex  Bibliography.bib  Evaluation.tex  Introduction.tex  Makefile  Makefile.LKN  ThesisLKN.ps  ThesisLKN.tex  ThesisLKN.toc
docs/final/tmp/: Abbreviations.tex  Abstract.tex  Appendix.tex  Background.tex  Conclusions.tex  Evaluation.tex  Formatting.tex  Kurzfassung.tex  LKN_Logo_klein.eps  Statements.tex  ThesisLKN.lof  ThesisLKN.lot  Thumbs.db  (+2 more)
docs/kickoff/: Kickoff.tex  Makefile
docs/meetings/: 01.04.md  15.04.md  18-03.md  25.03.md
docs/slidev/: Makefile  slides.md
examples/dpdk/: Makefile  main.c
examples/tcp/: Makefile  main.c
examples/tcpxx/: Makefile  main.cpp  main.h  socket.cpp
examples/udp/: main.c
examples/zeromq/: Makefile  ZMQSocket.cpp  ZMQSocket.hpp  main.cpp  main.h  socket.cpp
infra/docker/: Dockerfile
infra/packer/: Makefile  docker.pkr.hcl  gcp.pkr.hcl  vagrant.pkr.hcl  variables.pkr.hcl
infra/terra/: Makefile
lib/proto/: message.proto
manager/: __init__.py  __main__.py  classes.py  core.py  default.yaml  ds.py  heuristic.py  job.py  lemondrop.py  manager.py  mcast.py  message.proto  message_pb2.py  node.py  parent.py  runner.py  scheduler.py  task.py  tree.py  utils.py  worker.py  zmqsocket.py
manager/message/: __init__.py  message.proto  message_pb2.py
manager/scripts/: default.yaml
manager/task/: __init__.py  lemon.py  mcast.py  parent.py  rand.py  task.py
manager/types/: __init__.py  dicts.py  experiment.py  logger.py  pool.py  queue.py  timer.py  tree.py
manager/utils/: __init__.py
plans/: connect.yaml  default.yaml  docker.yaml  rand.yaml
schemas/: default.json  docker.json  rand.yaml
scripts/: client.sh  create.sh  delete.sh  deploy.sh  dts.sh  journal.sh  log.sh  module.sh  ping-pong.sh  proxy.sh  recipient.sh  ssh.sh  start.sh  upload.sh  utils.sh
src/: Makefile  ZMQSocket.cpp  ZMQSocket.hpp  child.cpp  lemon.cpp  main.c  main.cpp  main.hpp  mcast.cpp  parent.cpp
src/proto/: message.proto
src/utils/: ZMQSocket.hpp  common.cpp  common.hpp  lemon.hpp  log.hpp  message.pb.cc  message.pb.h  message.proto  utils.cpp  utils.hpp
templates/: instance.yaml
test/: lemon_test.py  node_test.py  old.py  pool_test.py  pytest.ini  tree_test.py  unit_test.py
tools/docker/: Dockerfile  entry.sh
tools/jasper/: Dockerfile  Makefile
tools/ttcs/: deploy_ttcs.sh  ttcs-agent.cfg
(+76 files in other folders)
